# pinkfish

./: .env.sample  .gitignore  pyproject.toml  pyrightconfig.json
src/pinkfish777/: analysis.py  benchmark.py  fetch.py  indicator.py  pfstatistics.py  plot.py  portfolio.py  utility.py
