[project]
name = "pinkfish777"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "from-root>=1.3.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "yfinance>=0.2.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
